[package]
name = "flexlint"
version = "0.2.7-pre"
authors = ["dalance <dalance@gmail.com>"]
repository = "https://github.com/dalance/flexlint"
license = "MIT"
readme = "README.md"
description = "A flexible linter with rules defined by regular expression"
categories = ["command-line-utilities", "development-tools"]
edition = "2018"

[dependencies]
colored      = "2.0.0"
failure      = "0.1.8"
glob         = "0.3.0"
regex        = "1.4.2"
serde        = "1.0.66"
serde_derive = "1.0.117"
structopt    = "0.3.20"
term         = "0.6.1"
toml         = "0.5.7"

[package.metadata.release]
dev-version-ext            = "pre"
pre-release-commit-message = "Prepare to v{{version}}"
pro-release-commit-message = "Start next development iteration v{{version}}"
tag-message                = "Bump version to {{version}}"
tag-prefix                 = ""
