[package]
name = "flexlint"
version = "0.2.7"
authors = ["dalance <dalance@gmail.com>"]
repository = "https://github.com/dalance/flexlint"
license = "MIT"
readme = "README.md"
description = "A flexible linter with rules defined by regular expression"
categories = ["command-line-utilities", "development-tools"]
edition = "2021"

[dependencies]
anyhow       = "1.0"
colored      = "3"
glob         = "0.3"
regex        = "1"
serde        = {version = "1.0", features = ["derive"]}
structopt    = "0.3"
term         = "1.0"
toml         = "0.8"

[package.metadata.release]
pre-release-commit-message  = "Prepare to v{{version}}"
post-release-commit-message = "Start next development iteration v{{version}}"
tag-message                 = "Bump version to {{version}}"
tag-prefix                  = ""
